# prompt-parser

./: LICENSE  README.md  pyproject.toml  test.py
PromptFile/: __init__.py
prompts/: bad.prompt  base.prompt  web_datadown.prompt
src/PromptFileParser/: __init__.py
